--- a/proofOfConcept/public/components/devices/devices.html
+++ b/proofOfConcept/public/components/devices/devices.html
@@ -1,8 +1,10 @@
 <div class="row">
-    <div class="col s12 m5">
+    <div class="col s12 m8">
         <div class="card-panel blue darken-2">
           <span class="white-text">
-              {{ dc.devices | json }}
+              <pre>
+{{ dc.devices | json }}
+              </pre>
           </span>
         </div>
     </div>
