--- a/proofOfConcept/public/components/devices/devices.html
+++ b/proofOfConcept/public/components/devices/devices.html
@@ -11,7 +11,7 @@
     <div class="col m4">
         <div class="card-panel">
           <span class="white-text">
-                <img style="width: 100%;" src="{{ dc.devices.actuator[0].image}}">
+                <img style="width: 100%;" src="{{ dc.devices.actuators[0].image}}">
           </span>
         </div>
     </div>
