--- a/public/components/menu/menu.html
+++ b/public/components/menu/menu.html
@@ -1,1 +1,34 @@
-<h2>testmenu</h2>
+<div class="row">
+    <div class="col m2 menu_item">
+        <div class="row">
+            <div class="col m12 text-center">
+                <img src="/images/icon_home.png" width="70%"><br>
+                Home
+            </div>
+        </div>
+    </div>
+    <div class="col m2 menu_item active">
+        <div class="row">
+            <div class="col m12 text-center">
+                <img src="/images/icon_apparaten.png" width="70%"><br>
+                Apparaten
+            </div>
+        </div>
+    </div>
+    <div class="col m2 menu_item">
+        <div class="row">
+            <div class="col m12 text-center">
+                <img src="/images/icon_sensoren.png" width="70%"><br>
+                Sensoren
+            </div>
+        </div>
+    </div>
+    <div class="col m2 menu_item">
+        <div class="row">
+            <div class="col m12 text-center">
+                <img src="/images/icon_instellingen.png" width="70%"><br>
+                Instellingen
+            </div>
+        </div>
+    </div>
+</div>
