--- a/public/components/actuator/actuator.overzicht.html
+++ b/public/components/actuator/actuator.overzicht.html
@@ -1,3 +1,23 @@
-<pre>
-{{aoc.actuator | json}}
-</pre>
+<!--<pre>-->
+<!--{{aoc.actuator | json}}-->
+<!--</pre>-->
+<div class="ptop_30">
+    <div class="col m6" ng-repeat="actuator in aoc.actuator">
+        <div class="row">
+            <div class="col m4">
+                <div class="customCard text-center">
+                    <div class="status red"></div>
+                    <img src="/images/icon_lamp.png" style="width:25px; margin-top:3px;">
+                </div>
+            </div>
+            <div class="col m8" style="margin-left:-8px; margin-top:0px;">
+                <div class="customCard" style="padding:1px;">
+                    <div class="detailcontainer">
+                        {{actuator.model.name}}<br>
+                        <span class="description">{{actuator.model.description.substring(0, 25)}}...</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
