--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,12 @@ html{
     height: 480px !important;
     width: 800px !important;
     overflow: hidden !important;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 body{
