onoff active state

--- a/public/components/actuator/actuator.overzicht.html
+++ b/public/components/actuator/actuator.overzicht.html
@@ -5,7 +5,7 @@
     <div class="col m6" ng-repeat="actuator in aoc.actuator">
         <div class="row">
             <div class="col m4">
-                <div class="customCard text-center">
+                <div class="customCard onoff text-center">
                     <div class="status red"></div>
                     <img src="/images/icon_lamp.png" style="width:25px; margin-top:3px;">
                 </div>
