--- a/public/components/actuator/actuator.overzicht.html
+++ b/public/components/actuator/actuator.overzicht.html
@@ -10,7 +10,7 @@
                     <img src="/images/icon_lamp.png" style="width:25px; margin-top:3px;">
                 </div>
             </div>
-            <div class="col m8" style="margin-left:-8px; margin-top:0px;">
+            <div class="col m8" ng-click="aoc.GoToDetail(actuator)" style="margin-left:-8px; margin-top:0px;">
                 <div class="customCard" style="padding:1px;">
                     <div class="detailcontainer">
                         {{actuator.model.name}}<br>
