--- a/public/components/menu/menu.html
+++ b/public/components/menu/menu.html
@@ -1,33 +1,33 @@
 <div class="row">
-    <div class="col m2 menu_item">
+    <div class="col m2 menu_item" ng-class="(mc.active == '') ? 'active' : ''" ui-sref="actuatorsOverzicht">
         <div class="row">
             <div class="col m12 text-center">
-                <img src="/images/icon_home.png" width="70%"><br>
-                Home
+                <img src="/images/icon_home{{mc.active=='' ? '_active' : ''}}.png" width="70%"><br>
+                <span>Home</span>
             </div>
         </div>
     </div>
-    <div class="col m2 menu_item active">
+    <div class="col m2 menu_item" ng-class="(mc.active == 'actuators') ? 'active' : ''" ui-sref="actuatorsOverzicht">
         <div class="row">
             <div class="col m12 text-center">
-                <img src="/images/icon_apparaten.png" width="70%"><br>
-                Apparaten
+                <img src="/images/icon_apparaten{{mc.active=='actuators' ? '_active' : ''}}.png" class="grayscale" width="70%"><br>
+                <span>Apparaten</span>
             </div>
         </div>
     </div>
-    <div class="col m2 menu_item">
+    <div class="col m2 menu_item" ng-class="(mc.active == 'sensors') ? 'active' : ''" ui-sref="sensorenOverzicht">
         <div class="row">
             <div class="col m12 text-center">
-                <img src="/images/icon_sensoren.png" width="70%"><br>
-                Sensoren
+                <img src="/images/icon_sensoren{{mc.active=='sensors' ? '_active' : ''}}.png" width="70%"><br>
+                <span>Sensoren</span>
             </div>
         </div>
     </div>
-    <div class="col m2 menu_item">
+    <div class="col m2 menu_item" ng-class="(mc.active == '') ? 'active' : ''" ui-sref="sensorenOverzicht">
         <div class="row">
-            <div class="col m12 text-center">
-                <img src="/images/icon_instellingen.png" width="70%"><br>
-                Instellingen
+            <div class="col m12 text-center" >
+                <img src="/images/icon_instellingen{{mc.active=='' ? '_active' : ''}}.png" width="70%"><br>
+                <span>Instellingen</span>
             </div>
         </div>
     </div>
