--- a/public/components/actuator/actuator.detail.html
+++ b/public/components/actuator/actuator.detail.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col m12">
                 <div class="command nopad valign-wrapper card" ng-repeat="command in adc.actuator.model.commands" ng-if="command.name != 'status'">
-                    <div ng-click="adc.showCommand(command.parameters)" class="touch valign" style="display: inline-block; width: 85%;">{{command.name}}</div>
+                    <div ng-click="adc.showCommand(command)" class="touch valign" style="display: inline-block; width: 85%;">{{command.name}}</div>
                     <div data-position="top" data-delay="50" data-tooltip="{{command.description}}" class="tooltipped text-center" style="display: inline-block; width:15%; background-color:#F84E19; color:white; font-size:24px;">i</div>
                 </div>
             </div>
@@ -33,7 +33,7 @@
 
 <div id="commandModal" class="modal" style="margin-top:-25px;">
     <div class="modal-content">
-        <h4>Modal Header</h4>
+        <h4 id="commandTitle">Modal Header</h4>
         <p>A bunch of text</p>
     </div>
 </div>
