--- a/public/components/sensor/sensor.detail.html
+++ b/public/components/sensor/sensor.detail.html
@@ -1,26 +1,65 @@
-<div class="row">
-    <div class="col s12">
-        <div class="col s6" style="position:fixed">
-            <h3>Info</h3>
-            <div class="col s6">
-                <h5>Type:</br> {{sdc.sensor.type}}</h5>
-                <h5>IP:</br>
-                {{sdc.sensor.ip}}</h5>
-                <h5>Beschrijving:</br>
-                {{sdc.sensor.description}}</h5>
-            </div>
-        </div>
-        <div class="col s6 offset-s6">
-            <h3>Sensor waarden</h3>
-            <div class="card small" style="height:100px; text-align:center" ng-repeat="(key,value) in sdc.sensor.commands.status.returns">
-                <div class="col s6">
-                    <h5  style="margin-top:35px">{{key}}</h5>
-                </div>
-                <div class="col s6" style="border-left: 2px solid #424242  ; height:100%">
-                    <h5 style="margin-top:35px">{{sdc.GetValueByKey(key)}}</h5>
-                </div>
-            </div>
-        </div>
+<!--<div class="row">-->
+    <!--<div class="col s12">-->
+        <!--<div class="col s6" style="position:fixed">-->
+            <!--<h3>Info</h3>-->
+            <!--<div class="col s6">-->
+                <!--<h5>Type:</br> {{sdc.sensor.type}}</h5>-->
+                <!--<h5>IP:</br>-->
+                <!--{{sdc.sensor.ip}}</h5>-->
+                <!--<h5>Beschrijving:</br>-->
+                <!--{{sdc.sensor.description}}</h5>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col s6 offset-s6">-->
+            <!--<h3>Sensor waarden</h3>-->
+            <!--<div class="card small" style="height:100px; text-align:center" ng-repeat="(key,value) in sdc.sensor.commands.status.returns">-->
+                <!--<div class="col s6">-->
+                    <!--<h5  style="margin-top:35px">{{key}}</h5>-->
+                <!--</div>-->
+                <!--<div class="col s6" style="border-left: 2px solid #424242  ; height:100%">-->
+                    <!--<h5 style="margin-top:35px">{{sdc.GetValueByKey(key)}}</h5>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
+<div class="row" style="margin-top:15px;">
+    <div class="col m2">
+        <div class="card touch waves-light text-center" style="height: 75px; padding-top:8px;">
+            <div style="background-image:url({{sdc.sensor.model.image}}); margin:0 auto; background-repeat: no-repeat; width: 50px; height:55px; background-size:contain;"></div>
+            <!--<img src="{{adc.actuator.model.image}}" style="width:40px; margin-top:3px;">-->
+        </div>
+    </div>
+    <div class="col m10">
+        <div class="row detaildescrip" style="margin-top:8px;">
+            <div class="col m12">
+                {{sdc.sensor.model.name}}
+            </div>
+            <div class="col m12">
+                <p class="description">{{sdc.sensor.model.description}}</p>
+            </div>
+        </div>
     </div>
 </div>
+
+<div class="row">
+    <div class="col m6 nopad">
+        <div class="row">
+            <div class="col m12">
+                <div class="command nopad valign-wrapper card"  ng-repeat="(key, value) in sdc.sensor.model.commands.status.returns">
+                    <div class="touch valign" style="display: inline-block; width: 85%;">{{key}} {{value}}</div>
+                    <div data-position="top" data-delay="50" data-tooltip="{{command.description}}" class="tooltipped text-center" style="display: inline-block; width:15%; background-color:#F84E19; color:white; font-size:24px;">i</div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="col m6 nopad">
+        <div class="card" style="padding:7px;">
+            < Loghistory of selected sensor >
+        </div>
+    </div>
+</div>
+
+
