--- a/public/components/sensor/sensor.overzicht.html
+++ b/public/components/sensor/sensor.overzicht.html
@@ -1,20 +1,3 @@
-<!--<div class="row">-->
-    <!--<div class="col s4 m4 l4" ng-repeat="sensor in soc.sensors" ng-click="soc.GoToDetail(sensor)">-->
-        <!--<div class="card-panel grey lighten-5" style="padding: 10px;">-->
-            <!--<div class="row" style="height: 50px;">-->
-                <!--<div class="col m4" style="height:50px;">-->
-                    <!--<img ng-src="{{sensor.image}}" ng-if="sensor.image" style="width: 100%;">-->
-                <!--</div>-->
-                <!--<div class="col m8">-->
-                    <!--<h6>{{sensor.alias}}</h6>-->
-                    <!--<span ng-repeat="(key, value) in sensor.commands.status.returns" ng-if="$index == 0">{{key}}: {{value}}</span>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-
-
 <!--<pre>-->
 <!--{{aoc.actuator | json}}-->
 <!--</pre>-->
@@ -23,8 +6,7 @@
         <div class="row">
             <div class="col m4">
                 <div class="customCard onoff text-center">
-                    <div class="status red"></div>
-                    <div style="background-image:url({{sensor.model.image}}); margin:0 auto; margin-top:6px; width: 36px; height:36px; background-size:cover;"></div>
+                    <div style="background-image:url({{sensor.model.image}}); margin:0 auto; margin-top:6px; width: 36px; background-repeat: no-repeat; height:36px; background-size:contain;"></div>
                     <!--<img src="{{actuator.model.image}}" style="width:25px; margin-top:3px;">-->
                 </div>
             </div>
@@ -32,7 +14,7 @@
                 <div class="customCard" style="padding:1px;">
                     <div class="detailcontainer">
                         {{sensor.model.name}}<br>
-                        <span ng-repeat="(key, value) in sensor.commands.status.returns" ng-if="$index == 0">{{key}}: {{value}}</span>
+                        <span class="description" ng-repeat="(key, value) in sensor.model.commands.status.returns" ng-if="$index == 0">{{key}}: {{value}}</span>
                     </div>
                 </div>
             </div>
