--- a/public/components/menu/menu.html
+++ b/public/components/menu/menu.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="col m2 menu_item" ng-class="(mc.active == '') ? 'active' : ''" ui-sref="actuatorsOverzicht">
+    <div class="col m2 menu_item" ng-class="(mc.active == 'dashboard') ? 'active' : ''" ui-sref="dashboard">
         <div class="row">
             <div class="col m12 text-center">
-                <img src="/images/icon_home{{mc.active=='' ? '_active' : ''}}.png" width="70%"><br>
+                <img src="/images/icon_home{{mc.active == 'dashboard' ? '_active' : ''}}.png" width="70%"><br>
                 <span>Home</span>
             </div>
         </div>
