--- a/public/css/app.css
+++ b/public/css/app.css
@@ -163,6 +163,10 @@ body{
     background-color: RGBA(189, 244, 106, 1);
 }
 
+.loglevel.auto{
+    background-color: #45B5C3;
+}
+
 .lognotice{
     font-size: 12px;
     padding-top:2px;
@@ -194,4 +198,12 @@ body{
 .command .touch{
     height: 36px;
     padding:6px;
+}
+
+.swiper-pagination-bullet{
+    margin-right:5px;
+}
+
+.swiper-pagination-bullet-active{
+    background:#F84E19;
 }
