--- a/public/css/app.css
+++ b/public/css/app.css
@@ -207,3 +207,12 @@ body{
 .swiper-pagination-bullet-active{
     background:#F84E19;
 }
+
+.pin1-4{
+    height: 140px;
+    padding:10px;
+}
+
+.no-overflow{
+    overflow:hidden;
+}
