--- a/public/components/actuator/actuator.detail.html
+++ b/public/components/actuator/actuator.detail.html
@@ -34,7 +34,7 @@
 <div id="commandModal" class="modal" style="margin-top:-25px;">
     <div class="modal-content">
         <h4 id="commandTitle">Modal Header</h4>
-        <p>A bunch of text</p>
+        <div class="modalWrapper"></div>
     </div>
 </div>
 
