--- a/public/components/header/header.html
+++ b/public/components/header/header.html
@@ -1,7 +1,7 @@
 <nav class="top-nav no-shadow white" style="height: 50px;position: fixed;">
     <div class="row" style="padding-left:25px; padding-top:0px; margin-top:-5px;">
         <div class="col m10">
-            <a class="valign" style="font-size:22px; color: black;">Jarvis</a>
+           <img src="images/logo.png" style="width:30px; margin-top:15px; margin-left:-20px; display:inline-block;"> <div class="valign" style="position: absolute; margin-left:5px; display:inline-block; font-size:22px; color: black;">Jarvis</div>
         </div>
         <div class="col m1">
             <img src="images/icon_wifi.png" style="width: 30px; margin-left:-25px; margin-top:13px;">
