added state view for devices in actuator overview & detail. Also possible to toggle state by clicking on actuator icon

--- a/public/components/actuator/actuator.detail.html
+++ b/public/components/actuator/actuator.detail.html
@@ -1,7 +1,7 @@
 <div class="row" style="margin-top:15px;">
     <div class="col m2">
-        <div class="card touch waves-light text-center" style="height: 75px; padding-top:8px;">
-            <div class="status green"></div>
+        <div ng-click="adc.toggleState(adc.actuator)" class="card touch waves-light text-center" style="height: 75px; padding-top:8px;">
+            <div class="status" ng-class="adc.actuator.status.state ? 'green' : 'red'"></div>
             <div style="background-image:url({{adc.actuator.model.image}}); margin:0 auto; width: 50px; height:55px; background-size:cover;"></div>
             <!--<img src="{{adc.actuator.model.image}}" style="width:40px; margin-top:3px;">-->
         </div>
