refactored event alert

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -217,10 +217,10 @@ body{
     overflow:hidden;
 }
 
-#event{
+.event{
     z-index: 9999;
     width: 800px;
-    height: 100vh;
+    height: 100%;
     position: absolute;
     background-color: #F84E19;
     text-align: center;
@@ -228,6 +228,7 @@ body{
     font-size:28px;
     padding-top:20vh;
     display: none;
+    top: 0;
 }
 
 .invert{
