--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,4 @@
 html{
-    height: 480px !important;
-    width: 800px !important;
-    overflow: hidden !important;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -54,6 +51,7 @@ body{
 .menucontainer{
     border-top:1px solid RGBA(149, 149, 149, 1);
     height: 100vh;
+    z-index: 9999;
 }
 
 .backpanel_dark{
