--- a/public/components/actuator/actuator.detail.html
+++ b/public/components/actuator/actuator.detail.html
@@ -46,14 +46,14 @@
                         <rzslider rz-slider-model="adc.currentvalues[paramkey]" rz-slider-options="{floor: param.accepts[0].limit[0].min, ceil: param.accepts[0].limit[0].max}"></rzslider>
                     </div>
                     <div ng-if="adc.checkInputType(param.accepts[0], 'input')">
-                        <input type="text" ng-model="adc.currentvalues[paramkey]"/>
+                        <input type="text" edit-dir ng-model="adc.currentvalues[paramkey]"/>
                     </div>
                     <div ng-if="adc.checkInputType(param.accepts[0], 'checkbox')">
                         <input type="checkbox" ng-model="adc.currentvalues[paramkey]"/>{{paramkey}}
                     </div>
                 </div>
                 <br><br>
-                <button class="btn btn-primary" ng-click="adc.HandleCommand()">hi</button>
+                <button class="btn btn-primary" ng-click="adc.HandleCommand()">Send</button>
             </div>
         </div>
     </div>
