--- a/public/components/menu/menu.html
+++ b/public/components/menu/menu.html
@@ -23,6 +23,14 @@
             </div>
         </div>
     </div>
+    <div class="col m2 menu_item" ng-class="(mc.active == 'scenario') ? 'active' : ''" ui-sref="scenarioOverzicht">
+        <div class="row">
+            <div class="col m12 text-center" >
+                <img src="/images/icon_scenario{{mc.active=='scenario' ? '_active' : ''}}.png" width="70%"><br>
+                <span>Scenario's</span>
+            </div>
+        </div>
+    </div>
     <div class="col m2 menu_item" ng-class="(mc.active == '') ? 'active' : ''" ui-sref="sensorenOverzicht">
         <div class="row">
             <div class="col m12 text-center" >
