--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,7 +8,9 @@ html{
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    /*cursor: none;*/
 }
+
 
 body{
     height: 480px !important;
