--- a/public/components/ruleEngine/ruleEngine.detail.html
+++ b/public/components/ruleEngine/ruleEngine.detail.html
@@ -11,7 +11,6 @@
         </select>
     </div>
 </div>
-
 <div class="row">
     <div class="col m3">
         <select ng-model="rec.threshold.device" style="display: block;" ng-change="rec.updateFieldList()">
@@ -34,10 +33,10 @@
         </select>
     </div>
     <div class="col m2">
-        <input ng-model="rec.threshold.value" placeholder="Waarde" id="value" type="text">
+        <input ng-model="rec.threshold.value" edit-dir placeholder="Waarde" id="value" type="text">
     </div>
     <div class="col m1">
-        <button ng-click="rec.addToThresholds()"> +</button>
+        <div style="width: 100%; height: 45px; color:white; border-radius: 2px; text-align: center; font-size:24px; font-weight: 100; padding-top:4px; cursor:pointer; background-color: #F84E19;" ng-click="rec.addToThresholds()"> +</div>
     </div>
 </div>
 
@@ -48,13 +47,13 @@
     </div>
 </div>
 
-<div style="overflow: scroll; height: 140px; width:100%;">
+<div style="overflow-y: scroll; height: 140px; width:100%;">
     <div class="row" style="padding-top:5px; background-color: #F4F4F4"
          ng-repeat="rule in rec.ruleObjects[rec.selectedCommand].thresholds">
         <div class="col m3">
             <select ng-model="rule.device" style="display: block;">
-                <option value="">Sensor</option>
-                <option ng-repeat="sensor in rec.sensors" value="{{sensor.id}}">{{sensor.config.alias}}</option>
+                <option value="">Sensor </option>
+                <option ng-selected="rule.device === sensor.id" ng-repeat="sensor in rec.sensors" value="{{sensor.id}}">{{sensor.config.alias}}</option>
             </select>
         </div>
         <div class="col m3">
@@ -71,7 +70,7 @@
             </select>
         </div>
         <div class="col m3">
-            <input ng-model="rule.value" placeholder="Waarde" type="text">
+            <input ng-model="rule.value" edit-dir placeholder="Waarde" type="text">
         </div>
     </div>
 </div>
