De basis van van scenario map ligt klaar voor gebruik, wijnadn go your gang

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -138,6 +138,15 @@ body{
     background-color: RGBA(189, 244, 106, 1);
 }
 
+.statusscenario {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    position: absolute;
+    right: 33%;
+    top: 28%;
+}
+
 .status{
     width: 10px;
     height: 10px;
