--- a/public/components/scenario/scenario.overzicht.html
+++ b/public/components/scenario/scenario.overzicht.html
@@ -1,6 +1,3 @@
-<!--<pre>-->
-<!--{{aoc.actuator | json}}-->
-<!--</pre>-->
 <div class="ptop_30">
     <div class="swiper-container">
         <div class="swiper-wrapper">
@@ -8,36 +5,39 @@
     </div>
 </div>
 
-<div class="swiper-container">
+<div class="row">
+    <div class="col m6">
+        <h2 style="margin:0px;">Scenario's</h2>
+    </div>
 
-    <div class="swiper-wrapper">
-
-        <div class="swiper-slide" ng-repeat="repeat in soc.repeater">
-            <div class="col m6" ng-if="$index >= ($parent.$index * 8) && $index < (($parent.$index+1) * 8)" ng-repeat="scenario in scene.scenarios">
-                <div class="row">
-                    <div class="col m4">
-                        <div class="customCard onoff text-center">
-                            <div style="background-image:url({{sensor.model.image}}); margin:0 auto; margin-top:6px; width: 36px; background-repeat: no-repeat; height:36px; background-size:contain;"></div>
-                            <!--<img src="{{actuator.model.image}}" style="width:25px; margin-top:3px;">-->
-                        </div>
-                    </div>
-                    <div class="col m8" ng-click="soc.GoToDetail(sensor)" style="margin-left:-8px; margin-top:0px;">
-                        <div class="customCard" style="padding:1px;">
-                            <div class="detailcontainer">
-                                {{sensor.config.alias}}<br>
-                        <span class="description" ng-repeat="(key, value) in sensor.status"
-                              ng-if="$index == 0">{{key}}: {{value}}</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div class="col m6" ng-click="scena.goToNew()" style="text-align:center">
+        <div class="col m10" style="margin-left:-8px; margin-top:0px;">
+            <div class="customCard" style="padding:1px; background-color:lightgrey">
+                <p style="margin-top:10px;">Nieuw Scenario</p>
             </div>
         </div>
-
     </div>
+</div>
 
 </div>
 
-<div style="left:285px; width: 12%; position: absolute; bottom:115px;">
-    <div class="swiper-pagination"></div>
+
+<div class="col m6" ng-repeat="scenario in scena.scenarios">
+    <div class="row" style="margin-bottom:10px">
+        <div class="col m4">
+            <div ng-click="scena.toggleState(scenario)" class="customCard onoff text-center">
+                <div class="statusscenario" ng-class="actuator.status.state ? 'green' : 'red'"></div>
+                <div style=" margin:0 auto; margin-top:6px; width: 36px; height:36px; background-size:cover;"></div>
+            </div>
+        </div>
+        <div class="col m8" ng-click="scena.goToDetail(scenario)"
+             style="margin-left:-8px; margin-top:0px;">
+            <div class="customCard" style="padding:1px;">
+                <div class="detailcontainer">
+                    {{scenario.name}}<br>
+                    <span class="description">{{scenario.description.substring(0, 25)}}...</span>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
