--- a/public/components/actuator/actuator.detail.html
+++ b/public/components/actuator/actuator.detail.html
@@ -46,10 +46,13 @@
                         <rzslider rz-slider-model="adc.currentvalues[paramkey]" rz-slider-options="{floor: param.accepts[0].limit[0].min, ceil: param.accepts[0].limit[0].max}"></rzslider>
                     </div>
                     <div ng-if="adc.checkInputType(param.accepts[0], 'input')">
-                        <input type="text" edit-dir ng-model="adc.currentvalues[paramkey]"/>
+                        <input type="text" edit-dir placeholder="{{paramkey}}" ng-model="adc.currentvalues[paramkey]"/>
                     </div>
                     <div ng-if="adc.checkInputType(param.accepts[0], 'checkbox')">
-                        <input type="checkbox" ng-model="adc.currentvalues[paramkey]"/>{{paramkey}}
+                        <p>
+                            <input type="checkbox" id="check{{paramkey}}" ng-model="adc.currentvalues[paramkey]" />
+                            <label for="check{{paramkey}}">{{paramkey}}</label>
+                        </p>
                     </div>
                 </div>
                 <br><br>
