--- a/public/components/scenario/scenario.new.html
+++ b/public/components/scenario/scenario.new.html
@@ -1,14 +1,19 @@
 
 <div class="row">
-    <ng-form class="col m6 offset-m3" style="text-align:center">
+    <ng-form class="col m12 offset-m3" style="margin-top: 40px; text-align:center">
         <div class="row">
-            <input type="text" edit-dir="" placeholder="Druk hier om de naam aan te passen" ng-model="snc.scenario.name"/>
+            <label for="name">Naam</label>
+            <input type="text" id="name" placeholder="Druk hier om de naam aan te passen"
+                   ng-model="snc.scenario.name"/>
+            <label for="description">Omschrijving</label>
+            <input type="text" id="description" placeholder="Druk hier om de omschrijving aan te passen"
+                   ng-model="snc.scenario.description"/>
         </div>
         <div class="row">
-            <input type="text" edit-dir="" placeholder="Druk hier om de omschrijving aan te passen" ng-model="snc.scenario.description"/>
-        </div>
-        <div class="row">
-            <input type="button" ng-click="snc.create()" name="Toevoegen">
+            <div class="customCard" style="padding:1px; vertical-align: middle; background-color:lightgrey">
+                <span type="button" ng-click="snc.create()">Toevoegen</span>
+            </div>
+
         </div>
     </ng-form>
 </div>
