--- a/public/components/scenario/scenario.overzicht.html
+++ b/public/components/scenario/scenario.overzicht.html
@@ -6,19 +6,17 @@
 </div>
 
 <div class="row">
-    <div class="col m6">
-        <h2 style="margin:0px;">Scenario's</h2>
-    </div>
+    <!--<div class="col m6">-->
+    <!--<h2 style="margin:0px;">Scenario's</h2>-->
+    <!--</div>-->
 
-    <div class="col m6" ng-click="scena.goToNew()" style="text-align:center">
-        <div class="col m10" style="margin-left:-8px; margin-top:0px;">
+    <div class="col m6 offset-m6" ng-click="scena.goToNew()" style="text-align:center">
+        <div class="col m12" style="margin-left:-8px; margin-top:0px; margin-right:-10px;">
             <div class="customCard" style="padding:1px; background-color:lightgrey">
                 <p style="margin-top:10px;">Nieuw Scenario</p>
             </div>
         </div>
     </div>
-</div>
-
 </div>
 
 
