Onscreen keyboard is shown now

--- a/public/components/scenario/scenario.new.html
+++ b/public/components/scenario/scenario.new.html
@@ -3,10 +3,10 @@
     <ng-form class="col m12 offset-m3" style="margin-top: 40px; text-align:center">
         <div class="row">
             <label for="name">Naam</label>
-            <input type="text" id="name" placeholder="Druk hier om de naam aan te passen"
+            <input type="text" edit-dir="" id="name" placeholder="Druk hier om de naam aan te passen"
                    ng-model="snc.scenario.name"/>
             <label for="description">Omschrijving</label>
-            <input type="text" id="description" placeholder="Druk hier om de omschrijving aan te passen"
+            <input type="text" edit-dir="" id="description" placeholder="Druk hier om de omschrijving aan te passen"
                    ng-model="snc.scenario.description"/>
         </div>
         <div class="row">
