Changes en bugfixes voor de ruleEngine

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -94,6 +94,10 @@ body{
     color:RGBA(149, 149, 149, 1);
 }
 
+.highlight{
+    color:#F84E19;
+}
+
 .no-shadow{
     -webkit-box-shadow: none;
     -moz-box-shadow:    none;
