new scenario styling

--- a/public/components/scenario/scenario.new.html
+++ b/public/components/scenario/scenario.new.html
@@ -9,8 +9,8 @@
                    ng-model="snc.scenario.description"/>
         </div>
         <div class="row">
-            <div class="customCard" style="padding:1px; vertical-align: middle; background-color:lightgrey">
-                <span type="button" ng-click="snc.create()">Toevoegen</span>
+            <div class="customCard" style="padding:1px; background-color:lightgrey">
+                <div style="text-align: center; margin-top: 10px;" ng-click="snc.create()">Toevoegen</div>
             </div>
         </div>
     </ng-form>
