--- a/public/components/scenario/scenario.detail.html
+++ b/public/components/scenario/scenario.detail.html
@@ -4,10 +4,10 @@
 <div class="col m10">
     <div class="row detaildescrip" style="margin-top:8px;">
         <div class="col m12">
-            <input type="text" edit-dir="" placeholder="Scenarionaam" ng-model="scd.scenarioName" ng-change="scd.updateName(scd.scenarioName)" style="margin-top:-10px;margin-bottom:0;"/>
+            <input type="text" edit-dir="" placeholder="Scenarionaam" ng-model="scd.scenarioName" ng-change="scd.updatename(scd.uid, scd.scenarioName)" style="margin-top:-10px;margin-bottom:0;"/>
         </div>
         <div class="col m12">
-            <input type="text" edit-dir="" placeholder="" ng-model="scd.scenarioDescription" ng-change="scd.updateDescription(scd.scenarioDescription)" style="margin-top:-10px; margin-bottom:0;">
+            <input type="text" edit-dir="" placeholder="" ng-model="scd.scenarioDescription" ng-change="scd.updateDescription(scd.uid, scd.scenarioDescription)" style="margin-top:-10px; margin-bottom:0;">
         </div>
     </div>
 </div>
