--- a/public/components/scenario/scenario.new.html
+++ b/public/components/scenario/scenario.new.html
@@ -15,3 +15,48 @@
         </div>
     </div>
 </div>
+
+
+
+<div id="actuatorscenario" class="modal" style="margin-top:-25px;">
+    <div class="modal-content">
+        <h4 id="commandTitle">Apparaat toevoegen</h4>
+        <div class="modalWrapper">
+            <div class="actuator">
+
+
+                <div class="ptop_30">
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide" ng-repeat="repeat in snc.repeater">
+                            <div class="col m6 repeater" ng-if="$index >= ($parent.$index * 8) && $index < (($parent.$index+1) * 8)"
+                                 ng-repeat="actuator in snc.actuators">
+                                <div class="row" style="margin-bottom:10px">
+                                    <div class="col m8" ng-click="snc.select(actuator)"
+                                         style="margin-left:-8px; margin-top:0px;">
+                                        <div class="customCard" style="padding:1px;">
+                                            <div class="detailcontainer">
+                                                {{actuator.name}}<br>
+                                                <span class="description">{{actuator.description.substring(0, 25)}}...</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <button class="btn btn-primary" ng-click="adc.HandleCommand()">Send</button>
+            </div>
+        </div>
+    </div>
+</div>
