--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
 html{
-    box-sizing:;
+    /*box-sizing:;*/
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
