--- a/public/components/scenario/scenario.new.html
+++ b/public/components/scenario/scenario.new.html
@@ -41,13 +41,6 @@
         <div class="modalWrapper">
             <div class="actuator">
 
-                <div class="ptop_30">
-                    <div class="swiper-container">
-                        <div class="swiper-wrapper">
-                        </div>
-                    </div>
-                </div>
-
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide" ng-repeat="repeat in snc.repeater">
@@ -55,12 +48,17 @@
                                  ng-if="$index >= ($parent.$index * 6) && $index < (($parent.$index+1) * 6)"
                                  ng-repeat="actuator in snc.actuators">
                                 <div class="row" style="margin-bottom:10px">
+                                    <div class="col m4">
+                                        <div class="customCard onoff text-center">
+                                            <div style="background-image:url({{actuator.model.image}}); margin:0 auto; margin-top:6px; width: 36px; height:36px; background-size:cover;"></div>
+                                        </div>
+                                    </div>
                                     <div class="col m8" ng-click="snc.select(actuator)"
                                          style="margin-left:-8px; margin-top:0px;">
                                         <div class="customCard" style="padding:1px;">
                                             <div class="detailcontainer">
-                                                {{actuator.name}}<br>
-                                                <span class="description">{{actuator.description.substring(0, 25)}}...</span>
+                                                {{actuator.config.alias}}<br>
+                                                <span class="description">{{actuator.model.description.substring(0, 25)}}...</span>
                                             </div>
                                         </div>
                                     </div>
@@ -70,7 +68,7 @@
                     </div>
                 </div>
 
-                <div style="left:285px; width: 12%; position: absolute; bottom:30px;">
+                <div style="left:285px; width: 12%; position: absolute; bottom:30px;" >
                     <div class="swiper-pagination">
                     </div>
                 </div>
